--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
 
             <div class="container-fluid">
                 <div class="row">
-                  <!--Article - Terroir -->
 
                     <!--Article - Domaine -->
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
@@ -95,6 +94,7 @@
                         </div>
                     </div>
 
+                    <!--Article - Terroir -->
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                         <div class="thumbnail text-justify">
                             <div class="caption">
@@ -136,8 +136,8 @@
                         </div>
                     </div>
                 </div>
-                <button class="btn btn-default" type="submit">Contactez-nous</button>
-            </footer>  
+                <button class="btn btn-default center-block" type="submit">Contactez-nous</button>
+            </footer>
 
         </div><!-- /div bloc page -->
     </body>
