modification du contenu index, contact, des images et du css

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                         <img src="images/domaine.jpg" alt="Domaine Doms">
                     </div>
                     <div class="item">
-                        <img src="images/terroir.jpg" alt="Nos vignes">
+                        <img src="images/vigne.jpg" alt="Nos vignes">
                     </div>
                     <div class="item">
-                        <img src="images/chais.jpg" alt="Notre cave">
+                        <img src="images/tonneaux.jpg" alt="Notre cave">
                     </div>
                     <div class="item">
-                        <img src="images/vins.jpg" alt="Nos vins">
+                        <img src="images/verresvin.jpeg" alt="Nos vins">
                     </div>
                   </div>
 
@@ -127,7 +127,7 @@
                         <div class="caption">
                           <h1> Partenariats </h1>
                           <ul id="partenariats">
-                              <li><a href="#">La cité du vin</a></li>
+                              <li><a href="http://www.laciteduvin.com/fr">La cité du vin</a></li>
                               <li><a href="http://www.vinsdegraves.com/en/node/3">Vins des Graves</a></li>
                               <li><a href="http://www.bordeaux.com/fr">Comité interprofessionnel des vins de Bordeaux (CIVB)</a></li>
                               <li><a href="http://www.bordeaux-graves-sauternes.com/">Roue des vins de Bordeaux en Graves et Sauternes</a></li>
