modification index, vins, contact et css

--- a/index.html
+++ b/index.html
@@ -13,9 +13,35 @@
 
     <body>
         <div id ="bloc_page">
-            <header>
-                <img src="images/logo_chateau_doms.png" class="img-responsive" alt="Château Doms" >
-            </header>
+          <header>
+            <div class="container-fluid">
+                <div class="row">
+
+                    <div class="hidden-xs col-sm-4 col-md-4 col-lg-4">
+                        <div class="thumbnail text-justify">
+                            <div class="caption">
+                                <img src="images/cep.png" class="img-responsive" >
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                        <div class="thumbnail text-justify">
+                            <div class="caption">
+                                <img src="images/logo_chateau_doms.png" class="img-responsive" alt="Château Doms" >
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="hidden-xs col-sm-4 col-md-4 col-lg-4">
+                        <div class="thumbnail text-justify">
+                            <div class="caption">
+                                <img src="images/cep2.png" class="img-responsive" >
+                            </div>
+                        </div>
+                    </div>
+                </div>
+          </header>
 
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
