--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,35 @@
 
 <body>
     <div id ="bloc_page">
-        <header>
-            <img src="images/logo_chateau_doms.png" class="img-responsive" alt="Château Doms" >
-        </header>
+      <header>
+        <div class="container-fluid">
+            <div class="row">
+
+                <div class="hidden-xs col-sm-4 col-md-4 col-lg-4">
+                    <div class="thumbnail text-justify">
+                        <div class="caption">
+                            <img src="images/cep.png" class="img-responsive" >
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                    <div class="thumbnail text-justify">
+                        <div class="caption">
+                            <img src="images/logo_chateau_doms.png" class="img-responsive" alt="Château Doms" >
+                        </div>
+                    </div>
+                </div>
+
+                <div class="hidden-xs col-sm-4 col-md-4 col-lg-4">
+                    <div class="thumbnail text-justify">
+                        <div class="caption">
+                            <img src="images/cep2.png" class="img-responsive" >
+                        </div>
+                    </div>
+                </div>
+            </div>
+      </header>
 
         <nav class="navbar navbar-default">
             <div class="container-fluid">
@@ -75,8 +101,59 @@
             </div>
         </div>
 
-        <!--Article - visite -->
+        <!--Article - formulaire -->
         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+            <div class="thumbnail text-justify">
+                <div class="caption">
+                  <p> <strong> Si vous souhaitez recevoir nos tarifs ou pour tout autre renseignement, n’hésitez pas à nous écrire. </strong> </p>
+
+                  <div class="row">
+                      <div class="civilite"> Civilité :
+                          <label class="radio-inline">
+                              <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked> M.
+                          </label>
+
+                          <label class="radio-inline">
+                              <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> Mme
+                          </label>
+
+                           <label class="radio-inline">
+                               <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> Mlle
+                           </label>
+                      </div>
+
+                      <form class="form-inline">
+                          <div class="form-group">
+                              <label class="sr-only" for="name">Nom </label>
+                              <input type="name" class="form-control" id="name" placeholder="Nom">
+                          </div>
+                          <div class="form-group">
+                              <label class="sr-only" for="surname">Prénom</label>
+                              <input type="surname" class="form-control" id="surname" placeholder="Prénom">
+                          </div>
+                      </form>
+
+                      <form>
+                          <div class="form-group">
+                              <label for="adresse mail">Adresse email</label>
+                              <input type="email" class="form-control" id="adresse mail" placeholder="Email">
+                          </div>
+
+                          <textarea class="form-control" rows="3">Message</textarea>
+
+                          <button type="submit" class="btn btn-default center-block">Envoyer</button>
+                      </form>
+                  </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2836.9818149080124!2d-0.4162811175292111!3d44.679150380705664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5517b50c235c43%3A0x6fb24808329db34f!2s10+Chemin+Lagaceye%2C+33640+Portets!5e0!3m2!1sfr!2sfr!4v1473750670980" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+
+        <!--Article - visite -->
+        <div class="col-xs-12 col-sm-8 col-md-5 col-lg-5">
             <div class="thumbnail text-justify">
                 <div class="caption">
                   <h1>Se rendre au Château Doms depuis Bordeaux</h1>
@@ -93,51 +170,6 @@
             </div>
         </div>
 
-        <!--Article - formulaire -->
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="thumbnail text-justify">
-                <div class="caption">
-                    <p> <strong> Si vous souhaitez recevoir nos tarifs ou pour tout autre renseignement, n’hésitez pas à nous écrire. </strong> </p>
-
-                    <div class="row">
-                        <div class="civilite"> Civilité :
-                            <label class="radio-inline">
-                                <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked> M.
-                            </label>
-
-                            <label class="radio-inline">
-                                <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> Mme
-                            </label>
-
-                             <label class="radio-inline">
-                                 <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> Mlle
-                             </label>
-                        </div>
-
-                        <form class="form-inline">
-                            <div class="form-group">
-                                <label class="sr-only" for="name">Nom </label>
-                                <input type="name" class="form-control" id="name" placeholder="Nom">
-                            </div>
-                            <div class="form-group">
-                                <label class="sr-only" for="surname">Prénom</label>
-                                <input type="surname" class="form-control" id="surname" placeholder="Prénom">
-                            </div>
-                        </form>
-
-                        <form>
-                            <div class="form-group">
-                                <label for="adresse mail">Adresse email</label>
-                                <input type="email" class="form-control" id="adresse mail" placeholder="Email">
-                            </div>
-
-                            <textarea class="form-control" rows="3">Message</textarea>
-
-                            <button type="submit" class="btn btn-default center-block">Envoyer</button>
-                        </form>
-                    </div>
-              </div>
-        </div>
 
         <footer>
             <img src="images/trait.png" class="img-responsive" >
