modification index, contact, vins et css

--- a/contact.html
+++ b/contact.html
@@ -1,62 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Contactez-nous</title>
+    <title>Contactez-nous</title>
 
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css" />
 
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
 </head>
 
 <body>
-    <div id ="bloc_page">
-      <header>
-        <div class="container-fluid">
-            <div class="row">
+    <div id="bloc_page">
+        <header>
+            <div class="container-fluid">
+                <div class="row">
 
-                <div class="hidden-xs col-sm-4 col-md-4 col-lg-4">
-                    <div class="thumbnail text-justify">
-                        <div class="caption">
-                            <img src="images/cep.png" class="img-responsive" >
+                    <div class="hidden-xs col-sm-4 col-md-4 col-lg-4">
+                        <div class="thumbnail text-justify">
+                            <div class="caption">
+                                <img src="images/cep.png" class="img-responsive">
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                    <div class="thumbnail text-justify">
-                        <div class="caption">
-                            <img src="images/logo_chateau_doms.png" class="img-responsive" alt="Château Doms" >
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                        <div class="thumbnail text-justify">
+                            <div class="caption">
+                                <img src="images/logo_chateau_doms.png" class="img-responsive" alt="Château Doms">
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="hidden-xs col-sm-4 col-md-4 col-lg-4">
-                    <div class="thumbnail text-justify">
-                        <div class="caption">
-                            <img src="images/cep2.png" class="img-responsive" >
+                    <div class="hidden-xs col-sm-4 col-md-4 col-lg-4">
+                        <div class="thumbnail text-justify">
+                            <div class="caption">
+                                <img src="images/cep2.png" class="img-responsive">
+                            </div>
                         </div>
                     </div>
+
                 </div>
             </div>
-      </header>
+        </header>
 
         <nav class="navbar navbar-default">
             <div class="container-fluid">
-              <!-- Brand and toggle get grouped for better mobile display -->
-                 <div class="navbar-header">
-                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                        <span class="sr-only">Toggle navigation</span>
                        <span class="icon-bar"></span>
                        <span class="icon-bar"></span>
                        <span class="icon-bar"></span>
                      </button>
-                 </div>
+                </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -80,116 +81,124 @@
                     </div>
                 </div>
             </div>
-        <!--Article - contact -->
-        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <div class="thumbnail text-justify">
-                <div class="caption">
-                    <h1>Nous contacter</h1>
-                    <p>SCE Vignobles Parage</br>
-                    Château Doms</br>
-                    10 route de Lagaceye</br>
-                    33640 Portets</br>
-                    Tél. : +33 (0)5 56 67 20 12</br>
-                    Fax : +33 (0)5 56 67 31 89</br>
-                    </br>
-                    Hélène Durand-Parage, Gérante</br>
-                    Amélie Durand, Œnologue</br>
-                    </br>
-                    chateau.doms@wanadoo.fr</br>
-                    www.chateau-doms.fr</p>
+            <!--Article - contact -->
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                <div class="thumbnail text-justify">
+                    <div class="caption">
+                        <h1>Nous contacter</h1>
+                        <p>SCE Vignobles Parage</br>
+                            Château Doms</br>
+                            10 route de Lagaceye</br>
+                            33640 Portets</br>
+                            Tél. : +33 (0)5 56 67 20 12</br>
+                            Fax : +33 (0)5 56 67 31 89</br>
+                            </br>
+                            Hélène Durand-Parage, Gérante</br>
+                            Amélie Durand, Œnologue</br>
+                            </br>
+                            chateau.doms@wanadoo.fr</br>
+                            www.chateau-doms.fr</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <!--Article - formulaire -->
-        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-            <div class="thumbnail text-justify">
-                <div class="caption">
-                  <p> <strong> Si vous souhaitez recevoir nos tarifs ou pour tout autre renseignement, n’hésitez pas à nous écrire. </strong> </p>
+            <!--Article - formulaire -->
+            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                <div class="thumbnail text-justify">
+                    <div class="caption">
+                        <p> <strong> Si vous souhaitez recevoir nos tarifs ou pour tout autre renseignement, n’hésitez pas à nous écrire. </strong> </p>
 
-                  <div class="row">
-                      <div class="civilite"> Civilité :
-                          <label class="radio-inline">
+                        <div class="row">
+                            <div class="civilite"> Civilité :
+                                <label class="radio-inline">
                               <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked> M.
                           </label>
 
-                          <label class="radio-inline">
+                                <label class="radio-inline">
                               <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> Mme
                           </label>
 
-                           <label class="radio-inline">
+                                <label class="radio-inline">
                                <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> Mlle
                            </label>
-                      </div>
+                            </div>
 
-                      <form class="form-inline">
-                          <div class="form-group">
-                              <label class="sr-only" for="name">Nom </label>
-                              <input type="name" class="form-control" id="name" placeholder="Nom">
-                          </div>
-                          <div class="form-group">
-                              <label class="sr-only" for="surname">Prénom</label>
-                              <input type="surname" class="form-control" id="surname" placeholder="Prénom">
-                          </div>
-                      </form>
+                            <form class="form-inline">
+                                <div class="form-group">
+                                    <label class="sr-only" for="name">Nom </label>
+                                    <input type="name" class="form-control" id="name" placeholder="Nom">
+                                </div>
+                                <div class="form-group">
+                                    <label class="sr-only" for="surname">Prénom</label>
+                                    <input type="surname" class="form-control" id="surname" placeholder="Prénom">
+                                </div>
+                            </form>
 
-                      <form>
-                          <div class="form-group">
-                              <label for="adresse mail">Adresse email</label>
-                              <input type="email" class="form-control" id="adresse mail" placeholder="Email">
-                          </div>
+                            <form>
+                                <div class="form-group">
+                                    <label for="adresse mail">Adresse email</label>
+                                    <input type="email" class="form-control" id="adresse mail" placeholder="Email">
+                                </div>
 
-                          <textarea class="form-control" rows="3">Message</textarea>
+                                <textarea class="form-control" rows="3">Message</textarea>
 
-                          <button type="submit" class="btn btn-default center-block">Envoyer</button>
-                      </form>
-                  </div>
+                                <button type="submit" class="btn btn-default center-block">Envoyer</button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2836.9818149080124!2d-0.4162811175292111!3d44.679150380705664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5517b50c235c43%3A0x6fb24808329db34f!2s10+Chemin+Lagaceye%2C+33640+Portets!5e0!3m2!1sfr!2sfr!4v1473750670980" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
+            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2836.9818149080124!2d-0.4162811175292111!3d44.679150380705664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5517b50c235c43%3A0x6fb24808329db34f!2s10+Chemin+Lagaceye%2C+33640+Portets!5e0!3m2!1sfr!2sfr!4v1473750670980"
+                    frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
 
-        <!--Article - visite -->
-        <div class="col-xs-12 col-sm-8 col-md-5 col-lg-5">
-            <div class="thumbnail text-justify">
-                <div class="caption">
-                  <h1>Se rendre au Château Doms depuis Bordeaux</h1>
-                  <p>Prendre l’autoroute A62 / E72 en direction de Toulouse</br>
-                  Prendre la Sortie 1.1 La brède</br>
-                  Continuer sur : D1113 sur 10 kms</br>
-                  A la sortie de Portets, prendre à droite : Chemin Lagaceye</br>
-                  Après 900 m, tourner à droite, arrivée au Château Doms</p>
-              </br>
-                  <h1>Utilisation d’un GPS</h1>
-                  <p>Coordonnées satellites : O : 0° 25’ 12’’ N : 44° 40’ 29’’</br>
-                  Saisir : « Ville » : Portets et « Rue » : Doms ou 10 chemin Lagaceye</br></p>
+            <!--Article - visite -->
+            <div class="col-xs-12 col-sm-8 col-md-5 col-lg-5">
+                <div class="thumbnail text-justify">
+                    <div class="caption">
+                        <h1>Se rendre au Château Doms depuis Bordeaux</h1>
+                        <p>Prendre l’autoroute A62 / E72 en direction de Toulouse</br>
+                            Prendre la Sortie 1.1 La brède</br>
+                            Continuer sur : D1113 sur 10 kms</br>
+                            A la sortie de Portets, prendre à droite : Chemin Lagaceye</br>
+                            Après 900 m, tourner à droite, arrivée au Château Doms</p>
+                        </br>
+                        <h1>Utilisation d’un GPS</h1>
+                        <p>Coordonnées satellites : O : 0° 25’ 12’’ N : 44° 40’ 29’’</br>
+                            Saisir : « Ville » : Portets et « Rue » : Doms ou 10 chemin Lagaceye</br>
+                        </p>
+                    </div>
                 </div>
             </div>
+
         </div>
 
 
         <footer>
-            <img src="images/trait.png" class="img-responsive" >
+            <img src="images/trait.png" class="img-responsive" />
             <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                 <div class="thumbnail text-justify">
                     <div class="caption">
-                      <h1> Partenariats </h1>
-                      <ul id="partenariats">
-                          <li><a href="http://www.laciteduvin.com/fr">La cité du vin</a></li>
-                          <li><a href="http://www.vinsdegraves.com/en/node/3">Vins des Graves</a></li>
-                          <li><a href="http://www.bordeaux.com/fr">Comité interprofessionnel des vins de Bordeaux (CIVB)</a></li>
-                          <li><a href="http://www.bordeaux-graves-sauternes.com/">Roue des vins de Bordeaux en Graves et Sauternes</a></li>
-                          <li><a href="http://tourisme-sud-gironde.com/z/index.php">Office de Tourisme Sauternes Graves Landes Girondines</a></li>
-                      </ul>
+                        <h1> Partenariats </h1>
+                        <ul id="partenariats">
+                            <li><a href="http://www.laciteduvin.com/fr">La cité du vin</a></li>
+                            <li><a href="http://www.vinsdegraves.com/en/node/3">Vins des Graves</a></li>
+                            <li><a href="http://www.bordeaux.com/fr">Comité interprofessionnel des vins de Bordeaux (CIVB)</a></li>
+                            <li><a href="http://www.bordeaux-graves-sauternes.com/">Roue des vins de Bordeaux en Graves et Sauternes</a></li>
+                            <li><a href="http://tourisme-sud-gironde.com/z/index.php">Office de Tourisme Sauternes Graves Landes Girondines</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
 
         </footer>
 
-    </div><!-- /div bloc page -->
-  </body>
-  </html>
+        <script type="text/javascript" src="js/jquery.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.js"></script>
+    </div>
+    <!-- /div bloc page -->
+</body>
+
+</html>
