--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css" />
 
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
 </head>
 
 <body>
@@ -83,6 +81,7 @@
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
                     <img src="images/domaine.jpg" alt="Domaine Doms">
+
                 </div>
                 <div class="item">
                     <img src="images/vigne.jpg" alt="Nos vignes">
@@ -105,6 +104,8 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+
+        <h1 class="slogan"> "Domaine viticole de mères en filles depuis plus de cinq générations."</h1>
 
         <div class="container-fluid">
             <div class="row">
@@ -154,7 +155,7 @@
 
                 <footer>
                     <img src="images/trait.png" class="img-responsive">
-                    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                         <div class="thumbnail text-justify">
                             <div class="caption">
                                 <h1> Partenariats </h1>
@@ -175,6 +176,10 @@
         </div>
     </div>
     <!-- /div bloc page -->
+
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
+
 </body>
 
 </html>
