--- a/vins.html
+++ b/vins.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css" />
 
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
 </head>
 
 <body>
@@ -72,16 +70,17 @@
         </nav>
 
         <div class="container-fluid">
+          <div class="row">  <!-- image -->
+              <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                  <div class="thumbnail text-justify">
+                      <div class="caption">
+                          <img src="images/verrevinrouge2.jpg" class="img-responsive" alt="Verre de vin">
+                      </div>
+                  </div>
+                  <h1 class="slogan"> "Domaine viticole de mères en filles depuis plus de cinq générations."</h1>
+              </div>
 
-            <!-- image -->
-            <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <div class="thumbnail text-justify">
-                        <div class="caption">
-                            <img src="images/verrevinrouge2.jpg" class="img-responsive" alt="Verre de vin">
-                        </div>
-                    </div>
-                </div>
+
 
                 <!-- bouteille 1 -->
                 <div class="row texte-vin-marge">
@@ -93,7 +92,7 @@
                     <div class="col-xs-7 col-xs-push-1 col-lg-3 marge-bloc-texte">
                         <h1>Le Graves Rouge</h1>
                         <p>Terroir : les vignes sont cultivées sur un sol de graves à sous-sol sablo-argileux. L’âge moyen des vignes est de 35 ans. Ce vin est un assemblage de Merlot (70%) et de Cabernet-Sauvignon...</p>
-                        
+
                         <!-- Bouton execution modal -->
                         <button class="btn btn-default btn-sm center-block" data-toggle="modal" data-target="#myModal"> En savoir plus </button>
                         <!-- Modal -->
@@ -295,6 +294,10 @@
 
     </div>
     <!-- /div bloc page -->
+
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
+
 </body>
 
 </html>
