--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 
     <title>Contactez-nous</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css" />
 
@@ -200,7 +201,7 @@
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
-    
+
 </body>
 
 </html>
