--- a/vins.html
+++ b/vins.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <title> Le chateau Doms, une histoire de femme </title>
-
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css" />
 
