--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             </div>
                         </div>
                     </div>
-                    <button class="btn btn-default center-block" type="submit">Contactez-nous</button>
+                    <button class="btn btn-default center-block" type="submit"><a href="contact.html">Contactez-nous</a></button>
                 </footer>
 
             </div>
