--- a/vins.html
+++ b/vins.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title> Le chateau Doms, une histoire de femme </title>
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css" />
@@ -290,7 +290,7 @@
                     </div>
                 </div>
             </div>
-            <button class="btn btn-default" type="submit">Contactez-nous</button>
+            <button class="btn btn-default center-block" type="submit"><a href="contact.html">Contactez-nous</a></button>
         </footer>
 
     </div>
